--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -6,15 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png?v=yyaQx3nQ34">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png?v=yyaQx3nQ34">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png?v=yyaQx3nQ34">
-    <link rel="manifest" href="/img/icons/manifest.json?v=yyaQx3nQ34">
-    <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg?v=yyaQx3nQ34" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/img/icons/apple-touch-icon.png?v=yyaQx3nQ34">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/img/icons/favicon-32x32.png?v=yyaQx3nQ34">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/img/icons/favicon-16x16.png?v=yyaQx3nQ34">
+    <link rel="manifest" href="static/img/icons/manifest.json?v=yyaQx3nQ34">
+    <link rel="mask-icon" href="static/img/icons/safari-pinned-tab.svg?v=yyaQx3nQ34" color="#5bbad5">
     <link rel="shortcut icon" href="static/img/icons/favicon.ico?v=yyaQx3nQ34">
     <meta name="apple-mobile-web-app-title" content="PhotoMasters">
     <meta name="application-name" content="PhotoMasters">
-    <meta name="msapplication-config" content="/img/icons/browserconfig.xml?v=yyaQx3nQ34">
+    <meta name="msapplication-config" content="static/img/icons/browserconfig.xml?v=yyaQx3nQ34">
     <meta name="theme-color" content="#ffffff">
     <title>PhotoMasters | Book A Pro Photographer</title>
     <meta name="author" content="PhotoMasters">
@@ -22,8 +22,9 @@
     <meta name="keywords" content="photography, baby photography, events photography, wedding photography, booking, kenyan photography, photography in ghana, photography in botswana, photographers association">
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
-    <!-- <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css"> -->
-    <link rel="stylesheet" href="/static/css/app.css" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}" type="text/css">
+    <!-- <link rel="stylesheet" href="/static/css/app.css" type="text/css"> -->
+    {% block extended_head %} {% endblock %}
     <script>
         // Wait for window load
         $(document).ready(function () {
@@ -34,6 +35,7 @@
 </head>
 
 <body>
+     {% block nav-content %} {% endblock%}
      {% block content %} {% endblock%}
 
     <section class="footer">
@@ -55,8 +57,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/vendor/what-input.js"></script>
+    <!-- <script src="js/app.js"></script> -->
+    <script src="{% static 'js/app.css' %}"></script>
+    <!-- <script src="js/vendor/what-input.js"></script> -->
     <script type="text/javascript">
         function registerServiceWorker() {
             //register sw in supporting browser
