fix url routing

--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -35,7 +35,9 @@
 </head>
 
 <body>
-     {% block nav-content %} {% endblock%}
+     {% block nav-content %}
+    
+     {% endblock%}
      {% block content %} {% endblock%}
 
     <section class="footer">
