--- a/booking/templates/booking/home.html
+++ b/booking/templates/booking/home.html
@@ -11,8 +11,8 @@
             </ul>
             <ul class="right">
                 <!--                   <span class="hamburger"></span>-->
-                <a href="categories.html" type="button" class="button cta responsive-button">Categories</a>
-                <a href="about-us.html" type="button" class="button hollow responsive-button">About</a>
+                <a href="{% url 'booking:categories' %}" type="button" class="button cta responsive-button">Categories</a>
+                <a href="{% url 'booking:about' %}" type="button" class="button hollow responsive-button">About</a>
             </ul>
         </nav>
         <div class="headline">
